--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "devDependencies": {
     "bootstrap": "^4.0.0",
     "jquery": "^3.2",
-    "laravel-mix": "^4.0.7"
+    "jquery-ui-dist": "^1.12.1",
+    "laravel-mix": "^4.0.7",
+    "bootstrap-sass": "^3.0.0"
+  },
+  "dependencies": {
+    "popper.js": "^1.15.0"
   }
 }
