--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "axios": "^0.19",
     "bootstrap": "^4.0.0",
+    "bootstrap-sass": "^3.3.7",
+    "cross-env": "^5.1",
     "jquery": "^3.2",
-    "jquery-ui-dist": "^1.12.1",
+    "jquery-ui": "^1.12.1",
     "laravel-mix": "^4.0.7",
-    "bootstrap-sass": "^3.0.0"
-  },
-  "dependencies": {
-    "popper.js": "^1.15.0"
+    "lodash": "^4.17.13",
+    "popper.js": "^1.12",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.6.10"
   }
 }
