--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/default.js": "/js/default.js",
-    "/css/default.css": "/css/default.css"
+    "/js/gridx.js": "/js/gridx.js",
+    "/css/gridx.css": "/css/gridx.css"
 }
