--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/gridx.js": "/js/gridx.js",
-    "/css/gridx.css": "/css/gridx.css"
+    "/js/gridx.js": "/js/gridx.js?id=a66e79535a0522926b10",
+    "/css/gridx.css": "/css/gridx.css?id=760a46a7e3a5b0c8be3b"
 }
