--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/gridx.js": "/js/gridx.js?id=3f30be9ed1b965f53a6d",
+    "/js/app.js": "/js/app.js?id=b22f225bca41f9d29984",
+    "/css/app.css": "/css/app.css?id=e2431d25ee99f61920d1",
+    "/js/gridx.js": "/js/gridx.js?id=34082be71072f1fe2d6e",
     "/css/gridx.css": "/css/gridx.css?id=3b685a4d5d9835439092"
 }
