--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=b22f225bca41f9d29984",
-    "/css/app.css": "/css/app.css?id=e2431d25ee99f61920d1",
-    "/js/gridx.js": "/js/gridx.js?id=34082be71072f1fe2d6e",
-    "/css/gridx.css": "/css/gridx.css?id=3b685a4d5d9835439092"
+    "/js/adminxCommon.js": "/js/adminxCommon.js?id=d41d8cd98f00b204e980",
+    "/css/adminx.css": "/css/adminx.css?id=1e4b12d11817addc8cd1"
 }
